Security/02-PeerAuthentication-Disable/02-demoapp-peerauthn.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: demoapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: demoapp
  mtls:
    mode: UNSET
---
